# Avito-Junior-Task

./: README.md  pyproject.toml
python_trainee_assignment/: traverse_matrix.py
tests/: test_trainee_matrix.py
