[tool.poetry]
name = "avito-junior-task"
version = "0.1.0"
description = ""
authors = ["Paku <mr.pavefimenko@yandex.ru>"]
readme = "README.md"
packages = [
    {include = "python_trainee_assignment"},
    {include = "tests"},
]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
flake8 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
